# devops-agent

./: .cursorrules  .gitignore  CLAUDE.md  README.md  devops-agent-implementation-plan.md  pyproject.toml
.claude/: settings.local.json
.cursor/rules/: devops-agent.mdc
docs/: authoring-globals.md  authoring-type-configs.md  getting-started.md  step-primitives.md  user-workflow.md
examples/globals/: config.yaml  environments.yaml  notifications.yaml  repos.yaml
examples/mcp-configs/: README.md  cursor.json
examples/type-configs/: deploy-new-env.yaml  hotfix.yaml  rollback.yaml
scripts/: install_playwright_browsers.py
src/devops_agent/: __init__.py  cli.py  server.py
src/devops_agent/browser/: profile.py  session.py
src/devops_agent/capture/: mss_backend.py  win_backend.py
src/devops_agent/config/: loader.py  paths.py  schema.py
src/devops_agent/notifications/: slack_web.py  teams_web.py  templates.py
src/devops_agent/os_control/: dpi.py  input.py  windows.py
src/devops_agent/resume/: resume.py
task-configs/: run-enetro-develop-pipeline.md  run-enetro-develop-pipeline.yaml
tests/fixtures/: shell-only-activation.yaml  shell-only-task.yaml
tests/integration/: test_e2e_shell_task.py  test_pr_flow.py
tests/unit/: test_config_loader.py  test_config_schema.py  test_error_paths.py  test_lifecycle.py  test_notifications.py  test_step_context.py  test_step_registry.py  test_task_models.py
transcripts/: 2026-04-19-bitbucket-develop-pipeline-setup.md  2026-04-19-jira-4444-develop-pipeline.md  setup-enetro-product-2026-04-19.md
(+36 files in other folders)
